--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Debojyoti</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Data Scientist, AI/ML Engineer, Data Analyst, Python Developer</div>
+                    <div class="typed-text d-none">Data Analyst, Data Scientist, Python Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="./static/Resume/Debojyoti_Chattoraj_Resume_2024_01.pdf"
                             class="btn btn-outline-light mr-5">Download CV</a>
@@ -298,7 +298,7 @@
                             <div class="mb-2 text-white">{{project.title}}</div>
                             <div>
                                 <a href="{{url_for('project', project_id = project.id)}}">
-                                    <i class="fa text-white" style="font-size: 30px;">👁️</i>
+                                    <i class="fa text-white" style="font-size: 30px;">🔎</i>
                                 </a>
                                 {%if logged_in:%}
                                 <a href="{{url_for('edit_project', project_id = project.id)}}">
