--- a/templates/project.html
+++ b/templates/project.html
@@ -19,6 +19,15 @@
         </div>
 
     </div>
+
+    {%if logged_in: %}
+    <div class="d-flex justify-content-center mb-4">
+        <!-- TODO: Editing posts-->
+        <a class="btn btn-primary float-right" href="{{url_for('edit_project', project_id = projects.id)}}">Edit
+            Post</a>
+    </div>
+    {%endif%}
+
 </div>
 
 
