modified text in html

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Data Scientist & AI/ML Engineer</h3>
+                    <h3 class="mb-4">Data Analyst & Data Scientist</h3>
                     <p>Meet Debojyoti Chattoraj, a dynamic professional who embarked on his career as an Analytical
                         Chemist in the pharmaceutical industry. Driven by an insatiable curiosity and passion for
                         innovation, he transitioned into the realm of Data Science, Artificial Intelligence and Machine
