added a category in portfolio section

--- a/templates/index.html
+++ b/templates/index.html
@@ -283,8 +283,9 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Data_Analytics">Data Analytics</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Data_Science">Data Science</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Web_Development">Web Development
-                        </li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Web_Development">Web Development</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Python_Development">Python Development</li>
+
                     </ul>
                 </div>
             </div>
