committing changes in format (index.html) and Project details loader

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                         style="-webkit-text-stroke: 2px #ffffff; font-family: Arial, sans-serif;">
                         Debojyoti
                     </h1>
-                    
+
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Data Analyst, Data Scientist, Python Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
@@ -60,28 +60,12 @@
     <div class="container-fluid py-5" id="about">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">About</h1>
+                <h1 class="display-1 text-uppercase text-white"
+                    style="-webkit-text-stroke: 1px #dee2e6; font-family: Arial, sans-serif;">About</h1>
                 <h1 class="position-absolute text-uppercase text-primary">About Me</h1>
             </div>
             <div class="row align-items-center">
-                <div class="col-lg-5 pb-4 pb-lg-0">
-                    <!-- <img class="img-fluid rounded w-100" src="static/img/about.jpg" alt=""> -->
-                    <h6>Home Location</h6>
-                    <div class="responsive-iframe">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14567.667862473392!2d88.25291445842065!3d24.10441535071047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f97de6c9a4d9b1%3A0xb787f11de7d65079!2sKhagra%2C%20Berhampore%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1729717200879!5m2!1sen!2sin"
-                            width="400" height="215" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
 
-                    <h6>Work Location</h6>
-                    <div class="responsive-iframe">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.870835187873!2d77.669796874472!3d12.851618087452824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6d27f79afe6b%3A0xc60ee40ef865c864!2sJanani%20Nivas!5e0!3m2!1sen!2sin!4v1730219946027!5m2!1sen!2sin"
-                            width="400" height="215" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Data Analyst & Data Scientist</h3>
                     <p>Meet Debojyoti Chattoraj, a dynamic professional who embarked on his career as an Analytical
@@ -90,7 +74,7 @@
                         Learning. With a rich background in chemistry, he meticulously acquired a diverse range of
                         skills that now fuel his expertise in Data Science and Artificial Intelligence, making him a
                         unique blend of analytical precision and technological prowess.</p>
-                    <div class="row mb-3">
+                    <div class="row mb-3 justify-content-center text-center">
                         <div class="col-sm-6 py-2">
                             <h6>Name: <span class="text-secondary">Debojyoti Chattoraj</span></h6>
                         </div>
@@ -117,8 +101,10 @@
                             <h6>Freelance: <span class="text-secondary">Available</span></h6>
                         </div>
                     </div>
+                    <div class="d-flex justify-content-center gap-3 mt-3">
                     <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
                     <a href="" class="btn btn-outline-primary">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -130,7 +116,8 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
+                <h1 class="display-1 text-uppercase text-white"
+                    style="-webkit-text-stroke: 1px #dee2e6; font-family: Arial, sans-serif;">Quality</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
             </div>
             <div class="row">
@@ -193,7 +180,8 @@
     <div class="container-fluid py-5" id="skill">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
+                <h1 class="display-1 text-uppercase text-white"
+                    style="-webkit-text-stroke: 1px #dee2e6; font-family: Arial, sans-serif;">Skills</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
             </div>
             <div class="row align-items-center">
@@ -277,7 +265,8 @@
     <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
+                <h1 class="display-1 text-uppercase text-white"
+                    style="-webkit-text-stroke: 1px #dee2e6; font-family: Arial, sans-serif;">Gallery</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
             </div>
             <div class="row">
@@ -286,8 +275,10 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Data_Analytics">Data Analytics</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Data_Science">Data Science</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Web_Development">Web Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Python_Development">Python Development</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Web_Development">Web Development
+                        </li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".Python_Development">Python
+                            Development</li>
 
                     </ul>
                 </div>
@@ -301,6 +292,14 @@
                             class="portfolio-btn bg-primary d-flex flex-column align-items-center justify-content-center">
                             <div class="mb-2 text-white">{{project.title}}</div>
                             <div>
+                                
+                                <button type="button" class="btn btn-primary open-project"
+                                    data-project-id="{{ project.id }}" data-bs-toggle="modal"
+                                    data-bs-target="#projectModal">
+                                    Open Project Details
+                                </button>
+
+
                                 <a href="{{url_for('project', project_id = project.id)}}">
                                     <i class="fa text-white" style="font-size: 30px;">🔎</i>
                                 </a>
@@ -338,7 +337,8 @@
     <div class="container-fluid pt-5" id="blog">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Certificates
+                <h1 class="display-1 text-uppercase text-white"
+                    style="-webkit-text-stroke: 1px #dee2e6; font-family: Arial, sans-serif;">Certificates
                 </h1>
                 <h1 class="position-absolute text-uppercase text-primary">Awards & Certificates</h1>
             </div>
@@ -379,7 +379,8 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
+                <h1 class="display-1 text-uppercase text-white"
+                    style="-webkit-text-stroke: 1px #dee2e6; font-family: Arial, sans-serif;">Contact</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
             </div>
             <div>
