committing change in about section

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,8 @@
             </div>
             <div class="row align-items-center">
 
-                <div class="col-lg-7">
-                    <h3 class="mb-4">Data Analyst & Data Scientist</h3>
+                <div class="col-lg-12">
+                    <h3 class="mb-4 text-center">Data Analyst & Data Scientist</h3>
                     <p>Meet Debojyoti Chattoraj, a dynamic professional who embarked on his career as an Analytical
                         Chemist in the pharmaceutical industry. Driven by an insatiable curiosity and passion for
                         innovation, he transitioned into the realm of Data Science, Artificial Intelligence and Machine
