turning off job description

--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
                             <p class="mb-2"><strong>{{experience.company}}</strong> | <small>{{experience.joining_date}}
                                     to {{experience.exit_date}}</small></p>
                             {%endif%}
-                            <p>{{experience.job_description |safe}}</p>
+                            <!-- <p>{{experience.job_description |safe}}</p> -->
                         </div>
                         {% endfor %}
 
