--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2"
-                        style="-webkit-text-stroke: 2px #ffffff; font-family: Arial, sans-serif;">
+                        style="-webkit-text-stroke: 2px #ffffff; font-family: Arial, sans-serif !important;">
                         Debojyoti
                     </h1>
 
