--- a/templates/footer.html
+++ b/templates/footer.html
@@ -46,7 +46,7 @@
 
 <!-- Project Details Modal -->
 <div class="modal fade custom-modal" id="projectModal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog" style="max-width: 90vw; width: 90%;">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="projectModalLabel">Project Details</h5>
@@ -79,7 +79,7 @@
                         if (data.file_url) {
                             // Embed the PDF inside an iframe
                             projectContent.innerHTML = `
-                        <iframe src="${data.file_url}" width="100%" height="500px" frameborder="0"></iframe>`;
+                        <iframe src="${data.file_url}" width="100%" height="700px" frameborder="0"></iframe>`;
                         } else {
                             projectContent.innerHTML = "<p>Project document not found.</p>";
                         }
