--- a/templates/index.html
+++ b/templates/index.html
@@ -284,7 +284,7 @@
             </div>
             {% endif %}
 
-            <div class="row">
+            <div class="row justify-content-center align-items-center text-center flex-wrap">
                 {% for tool in tools %}
                 <div class="col-lg-1 mb-5">
                     <div class="position-relative mb-4">
